--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 
 description = "Rust bindings and idiomatic wrapper for libclang."
 
+documentation = "https://kylemayes.github.io/clang-rs/clang"
 repository = "https://github.com/KyleMayes/clang-rs"
 
 [dependencies]
