--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ repository = "https://github.com/KyleMayes/clang-rs"
 bitflags = "^0.3.2"
 lazy_static = "^0.1.15"
 libc = "^0.2.2"
+uuid = "^0.1.18"
 
 [dependencies.clippy]
 
