--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ repository = "https://github.com/KyleMayes/clang-rs"
 
 [dependencies]
 
-bitflags = "^0.3.2"
-lazy_static = "^0.1.15"
-libc = "^0.2.2"
-uuid = "^0.1.18"
+bitflags = "0.3.3"
+lazy_static = "0.1.15"
+libc = "0.2.2"
+uuid = "0.1.18"
 
 [dependencies.clippy]
 
-version = "0.0.27"
+version = "0.0.29"
 optional = true
