--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT"
 
 description = "Rust bindings and idiomatic wrapper for libclang."
 
-documentation = "https://kylemayes.github.io/clang-rs/clang"
+documentation = "https://kylemayes.github.io/clang-rs/all/clang"
 repository = "https://github.com/KyleMayes/clang-rs"
 
 build = "build.rs"
