--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ rust:
 before_script:
   - wget http://llvm.org/releases/3.7.0/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
   - tar -xf clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
-  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/lib
+  - export LIBCLANG=$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/lib/libclang.so
 
 script:
   - cargo build --verbose --features clang_3_7
-  - cargo test
+  - cp $LIBCLANG target/libclang.so
+  - cargo test --verbose
