--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 
 language: rust
 
@@ -8,11 +8,9 @@ rust:
   - nightly
 
 before_script:
-  - wget http://llvm.org/releases/3.7.0/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
-  - tar -xf clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
-  - export LIBCLANG=$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/lib/libclang.so
+  - sudo apt-get update -qq
+  - sudo apt-get install -y clang-3.7
 
 script:
   - cargo build --verbose --features clang_3_7
-  - cp $LIBCLANG target/libclang.so
   - cargo test --verbose
