Fix version feature passing to clang-sys

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ repository = "https://github.com/KyleMayes/clang-rs"
 
 [features]
 
-clang_3_5 = []
-clang_3_6 = []
-clang_3_7 = []
+clang_3_5 = ["clang-sys/clang_3_5"]
+clang_3_6 = ["clang-sys/clang_3_6"]
+clang_3_7 = ["clang-sys/clang_3_7"]
 
 [dependencies]
 
