--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ rust:
   - beta
   - nightly
 
-before_script:
-  - wget http://llvm.org/releases/3.7.0/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
-  - tar -xf clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
-  - export LIBCLANG=$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/lib/libclang.so
+addons:
+  apt:
+    packages:
+      - clang-3.7
 
 script:
   - cargo build --verbose --features clang_3_7
-  - cp $LIBCLANG target/debug/deps/libclang.so
   - cargo test --verbose
