--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 
 language: rust
 
@@ -7,10 +7,13 @@ rust:
   - beta
   - nightly
 
-addons:
-  apt:
-    packages:
-      - libclang1-3.7
+install:
+  - sudo apt-add-repository "deb http://llvm.org/apt/precise/ llvm-toolchain-precise main" --yes
+  - sudo apt-add-repository "deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main"  --yes
+  - sudo apt-get update
+  - sudo apt-get install libclang1-3.7 libclang-common-3.7-dev  --yes --force-yes
+  - sudo ln -v -s /usr/lib/x86_64-linux-gnu/libclang-3.7.so.1 /usr/lib/x86_64-linux-gnu/libclang.so
+  - sudo ldconfig
 
 script:
   - cargo build --verbose --features clang_3_7
