--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+sudo: false
 
 language: rust
 
@@ -7,14 +7,12 @@ rust:
   - beta
   - nightly
 
-install:
-  - sudo apt-add-repository "deb http://llvm.org/apt/precise/ llvm-toolchain-precise main" --yes
-  - sudo apt-add-repository "deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main"  --yes
-  - sudo apt-get update
-  - sudo apt-get install libclang1-3.7 libclang-common-3.7-dev  --yes --force-yes
-  - sudo ln -v -s /usr/lib/x86_64-linux-gnu/libclang-3.7.so.1 /usr/lib/x86_64-linux-gnu/libclang.so
-  - sudo ldconfig
+before_script:
+  - wget http://llvm.org/releases/3.6.2/clang+llvm-3.6.2-x86_64-linux-gnu-ubuntu-14.04.tar.xz
+  - tar -xf clang+llvm-3.6.2-x86_64-linux-gnu-ubuntu-14.04.tar.xz
+  - export LIBCLANG=$PWD/clang+llvm-3.6.2-x86_64-linux-gnu-ubuntu-14.04/lib/libclang.so
 
 script:
-  - cargo build --verbose --features clang_3_7
+  - cargo build --verbose --features clang_3_6
+  - cp $LIBCLANG target/debug/deps/libclang.so
   - cargo test --verbose
