--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,11 @@ repository = "https://github.com/KyleMayes/clang-rs"
 
 [features]
 
-clang_3_5 = ["clang-sys/clang_3_5", "gte_clang_3_5"]
-clang_3_6 = ["clang-sys/clang_3_6", "gte_clang_3_5", "gte_clang_3_6"]
-clang_3_7 = ["clang-sys/clang_3_7", "gte_clang_3_5", "gte_clang_3_6", "gte_clang_3_7"]
-clang_3_8 = ["clang-sys/clang_3_8", "gte_clang_3_5", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8"]
+clang_3_5 = ["clang-sys/clang_3_5"]
+clang_3_6 = ["clang-sys/clang_3_6", "gte_clang_3_6"]
+clang_3_7 = ["clang-sys/clang_3_7", "gte_clang_3_6", "gte_clang_3_7"]
+clang_3_8 = ["clang-sys/clang_3_8", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8"]
 
-gte_clang_3_5 = []
 gte_clang_3_6 = []
 gte_clang_3_7 = []
 gte_clang_3_8 = []
