--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,13 @@ gte_clang_3_8 = []
 
 [dependencies]
 
-clang-sys = "0.2.1"
 lazy_static = "0.1.15"
-libc = "0.2.7"
+libc = "0.2.8"
+
+[dependencies.clang-sys]
+
+version = "0.3.0"
+features = ["clang_3_5"]
 
 [dependencies.clippy]
 
