--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 name = "clang"
 authors = ["Kyle Mayes <kyle@mayeses.com>"]
 
-version = "0.5.2"
+version = "0.5."
 
 readme = "README.md"
 license = "Apache-2.0"
