--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,13 +28,9 @@ gte_clang_3_8 = []
 
 [dependencies]
 
+clang-sys = "0.4.0"
 lazy_static = "0.1.15"
 libc = "0.2.8"
-
-[dependencies.clang-sys]
-
-version = "0.3.1"
-features = ["clang_3_5"]
 
 [dependencies.clippy]
 
