Fix Travis CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: rust
 matrix:
   include:
     - rust: stable
-      env: CLANG_VERSION=clang_3_5
+      env: CLANG_VERSION=clang_3_5 LIBCLANG_PATH=/usr/lib/llvm-3.5/lib
       addons:
         apt:
           sources:
@@ -14,7 +14,7 @@ matrix:
             - libclang-3.5-dev
             - llvm-3.5-dev
     - rust: stable
-      env: CLANG_VERSION=clang_3_6
+      env: CLANG_VERSION=clang_3_6 LIBCLANG_PATH=/usr/lib/llvm-3.6/lib
       addons:
         apt:
           sources:
@@ -25,7 +25,7 @@ matrix:
             - libclang-3.6-dev
             - llvm-3.6-dev
     - rust: stable
-      env: CLANG_VERSION=clang_3_7
+      env: CLANG_VERSION=clang_3_7 LIBCLANG_PATH=/usr/lib/llvm-3.7/lib
       addons:
         apt:
           sources:
@@ -36,7 +36,7 @@ matrix:
             - libclang-3.7-dev
             - llvm-3.7-dev
     - rust: stable
-      env: CLANG_VERSION=clang_3_8
+      env: CLANG_VERSION=clang_3_8 LIBCLANG_PATH=/usr/lib/llvm-3.8/lib
       addons:
         apt:
           sources:
