--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.9.3"
 readme = "README.md"
 license = "Apache-2.0"
 
-description = "An idiomatic Rust wrapper for libclang."
+description = "A somewhat idiomatic Rust wrapper for libclang."
 
 documentation = "https://kylemayes.github.io/clang-rs/3_5/clang"
 repository = "https://github.com/KyleMayes/clang-rs"
@@ -32,10 +32,7 @@ clang-sys = "0.6.0"
 lazy_static = "0.2.1"
 libc = "0.2.11"
 
-[dependencies.clippy]
-
-version = "0.0.69"
-optional = true
+clippy = { version = "0.0.*", optional = true }
 
 [[test]]
 
