--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,18 @@ clang_3_5 = ["clang-sys/clang_3_5"]
 clang_3_6 = ["clang-sys/clang_3_6", "gte_clang_3_6"]
 clang_3_7 = ["clang-sys/clang_3_7", "gte_clang_3_6", "gte_clang_3_7"]
 clang_3_8 = ["clang-sys/clang_3_8", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8"]
+clang_3_9 = ["clang-sys/clang_3_9", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9"]
 
 gte_clang_3_6 = []
 gte_clang_3_7 = []
 gte_clang_3_8 = []
+gte_clang_3_9 = []
 
 [dependencies]
 
-clang-sys = "0.7.2"
+clang-sys = "0.8.0"
 lazy_static = "0.2.1"
-libc = "0.2.11"
+libc = "0.2.14"
 
 clippy = { version = "0.0.*", optional = true }
 
