--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,12 @@ rust: stable
 
 env:
   - LLVM_VERSION=3.5 CLANG_VERSION=clang_3_5
-  - LLVM_VERSION=4.0 CLANG_VERSION=clang_4_0
+  - LLVM_VERSION=5.0 CLANG_VERSION=clang_5_0
+
+cache:
+  directories:
+    - $HOME/.cargo
+    - $HOME/.llvm
 
 before_install: . ./ci/before_install.sh
 
