--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ description = "A somewhat idiomatic Rust wrapper for libclang."
 documentation = "https://kylemayes.github.io/clang-rs/3_5/clang"
 repository = "https://github.com/KyleMayes/clang-rs"
 
+autotests = false
+
 [features]
 
 runtime = ["clang-sys/runtime"]
