--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ clang_5_0 = ["clang-sys/clang_5_0", "gte_clang_3_6", "gte_clang_3_7", "gte_clang
 clang_6_0 = ["clang-sys/clang_6_0", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0"]
 clang_7_0 = ["clang-sys/clang_7_0", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0", "gte_clang_7_0"]
 clang_8_0 = ["clang-sys/clang_8_0", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0", "gte_clang_7_0", "gte_clang_8_0"]
+clang_9_0 = ["clang-sys/clang_9_0", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0", "gte_clang_7_0", "gte_clang_8_0", "gte_clang_9_0"]
 
 gte_clang_3_6 = []
 gte_clang_3_7 = []
@@ -40,10 +41,11 @@ gte_clang_5_0 = []
 gte_clang_6_0 = []
 gte_clang_7_0 = []
 gte_clang_8_0 = []
+gte_clang_9_0 = []
 
 [dependencies]
 
-clang-sys = "0.28.0"
+clang-sys = "0.29.0"
 libc = "0.2.39"
 
 [[test]]
