--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 
 description = "A somewhat idiomatic Rust wrapper for libclang."
 
-documentation = "https://kylemayes.github.io/clang-rs/3_5/clang"
+documentation = "https://docs.rs/clang"
 repository = "https://github.com/KyleMayes/clang-rs"
 
 autotests = false
